--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
-  },
+  "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+  "test:watch": "jest --watch",
+  "test:coverage": "jest --coverage"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AlexanderJson/K3---Projekt-i-team.git"
@@ -25,15 +25,5 @@
     "eslint": "^9.39.2",
     "globals": "^17.3.0",
     "jest": "^30.2.0"
-  },
-  "jest": {
-    "coverageThreshold": {
-      "global": {
-        "lines": 80,
-        "statements": 80,
-        "functions": 80,
-        "branches": 80
-      }
-    }
   }
 }
