--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "serve": "http-server . -p 8080",
+    "lighthouse": "lhci autorun"
   },
   "repository": {
     "type": "git",
@@ -22,9 +24,14 @@
   "homepage": "https://github.com/AlexanderJson/K3---Projekt-i-team#readme",
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@lhci/cli": "^0.15.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "eslint": "^9.39.2",
     "globals": "^17.3.0",
+    "http-server": "^14.1.1",
     "jest": "^30.2.0",
+    "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.2.0",
     "jsdoc": "^4.0.5"
   }
