--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.2.0",
     "jsdoc": "^4.0.5"
+  },
+  "dependencies": {
+    "html5-qrcode": "^2.3.8",
+    "qrcode-generator": "^2.0.4"
   }
 }
