--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "serve": "http-server . -p 8080",
-    "lighthouse": "lhci autorun"
+    "lighthouse": "lhci autorun",
+    "build": "node build.js",
+    "serve:dist": "http-server dist -p 8080"
   },
   "repository": {
     "type": "git",
@@ -27,13 +29,17 @@
     "@lhci/cli": "^0.15.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
+    "cssnano": "^7.1.2",
     "eslint": "^9.39.2",
     "globals": "^17.3.0",
     "http-server": "^14.1.1",
     "jest": "^30.2.0",
     "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.2.0",
-    "jsdoc": "^4.0.5"
+    "jsdoc": "^4.0.5",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "terser": "^5.46.0"
   },
   "dependencies": {
     "html5-qrcode": "^2.3.8",
