--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,7 +2,7 @@ name: Deploy static site
 
 on:
   push:
-    branches: [ "main" ]   
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -16,11 +16,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Ladda upp hela repo-roten som artefakt
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      # Ladda upp dist-mappen som artefakt
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .   # publicera allt i root
+          path: dist
 
   deploy:
     needs: upload
